force-app/main/default/objects/Lead/fields/i_want_my_consultation__c.field-meta.xml
<CustomField>
    <fullName>i_want_my_consultation__c</fullName>
    <label>i want my consultation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>