force-app/main/default/objects/Lead/fields/Last_Activity_log__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_log__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity log</label>
    <type>Date</type>
</CustomField>