force-app/main/default/objects/Lead/fields/LeadActivityLog__c.field-meta.xml
<CustomField>
    <fullName>LeadActivityLog__c</fullName>
    <label>LeadActivityLog</label>
    <type>DateTime</type>
</CustomField>