force-app/main/default/objects/Lead/fields/uuu__c.field-meta.xml
<CustomField>
    <fullName>uuu__c</fullName>
    <formula>Now()- CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>uuu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>