force-app/main/default/objects/Lead/listViews/Test_Lead.listView-meta.xml
<ListView>
    <fullName>Test_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Test</label>
    <queue>Test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>