force-app/main/default/objects/Lead/listViews/US_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>US_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>US Queue</label>
    <queue>US_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>